--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -3,4 +3,4 @@ contact_links:
   - name: Add new ToDo
     about: made by config.yml
     # edit {username} and {repo} for your environment
-    url: https://github.com/haoblackj/《Kanketsuba》/issues/new?template=custom.md&projects=haoblackj%2F《Kanketsuba》%2F1
+    url: https://github.com/DoujimaKobo《Kanketsuba》/issues/new?template=custom.md&projects=haoblackj%2F《Kanketsuba》%2F1
